[package]
name = "tmpgen"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "text file generator based on templates"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5"
chrono = "0.4"
clap = { version = "3.0.14", features = ["derive"] }
anyhow = "1.0"
