[package]
name = "rtgen"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "text file generator based on templates"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5"
chrono = "0.4"
anyhow = "1.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
clap = { version = "4.3.10", features = ["derive"] }
